# dependency_inversion

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/order/: create_order_events.py  create_order_observer.py  create_order_request.py  order.py  order_repository.py  order_service.py
app/core/product/: product.py  product_repository.py
app/core/transaction_manager/: transaction_manager.py
app/core/user/: user.py  user_repository.py
app/postgres/order/: create_order_observer.py  order_repository.py
app/postgres/product/: product_repository.py
app/postgres/transaction_manager/: transaction_manager.py
app/postgres/user/: user.py
tests/: test_order_service.py
