[tool.poetry]
name = "dependency_inversion"
version = "0.1.0"
description = "Dependency inversion example"
authors = ["57BBBears https://github.com/57BBBears"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pyright = "^1.1.314"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
